<resources>

    <string name="app_name">camL</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CamL</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tab_text_1">Timer</string>
    <string name="tab_text_2">Project</string>
    <string name="tab_text_3">TODO</string>
    <string name="tab_todo_text_1">Todos</string>
    <string name="tab_todo_text_2">Settings</string>
    <string name="settings">Settings</string>
    <string name="stats">Statistics</string>
    <string name="login">Login</string>
    <string name="todos">Todos</string>
    <string name="info">Information</string>
    <string name="about">About</string>
    <string name="account">Account</string>
    <string name="timer_start">Start</string>
    <string name="switch_legend">Silent Mode</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Tab 1 -->
    <string name="timer_button">0:00</string>
    <string name="timer_task">“Current task”</string>
    <!-- \Tab 1 -->

    <string name="pref_header_theme">Theme</string>
    <string name="title_color">Theme Color</string>
    <string name="key_color">key_color</string>

    <string name="pref_header_pom">Pomodoro</string>
    <string name="title_time_pom">Length</string>
    <string name="summary_time_pom">Choose a time for your Pomodoro</string>
    <string name="key_time_pom">key_time_pom</string>

    <string name="title_cycle_pom">Cycles</string>
    <string name="summary_cycle_pom">Choose the number of Pomodoro cycle</string>
    <string name="key_pomodoro_cycle">key_pomodoro_cycle</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="summary_pom_ringtone">Choose the sound you like to hear at the end of your Pomodoro</string>
    <string name="key_pom_end_ringtone">key_pom_end_ringtone</string>

    <string name="summary_choose_ringtone">Choose your notification ringtone</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="pref_title_notifications">Notifications</string>
    <string name="title_new_notification_sound">New message notification</string>

    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>

    <string name="pref_header_about">About</string>
    <string name="summary_about">We are students in Android Development and for now we\'re still happy to do this !</string>

    <string name="title_version">Version</string>
    <string name="app_version">0.3</string>

    <!-- About Activity -->
    <string name="about_logo_content_description">logo</string>
    <string name="about_caml">What is camL about?</string>
    <string name="about_caml_text">What if you could become more productive by following small, simple rules? That is what camL is all about. By combining the Non-Zero Days and the pomodoro rules, we believe that you can achieve your goals and dreams in a more effective way.</string>
    <string name="about_non_zero_day">What is a Non-Zero Day?</string>
    <string name="about_non_zero_day_text">
        A Non-Zero Day is a productivity principle which follows a few rules. Such a day is called as such when you do something that you deem productive during the day, whether it is making your bed, doing your homework or working on a project you are passionate about.\n\n
        Four rules define this principle:\n
        1. There are no more zero days.\n
        2. Be grateful to the three you.\n
        3. Forgive yourself.\n
        4. Exercise and books.
    </string>
    <string name="about_pomodoro">What is a pomodoro?</string>
    <string name="about_pomodoro_text">A pomodoro is a method used for breaking work into multiple cycles of shorter work. \n
        The process consists of 6 steps :\n
        1. Choose a task you\'d like to get done.\n
        2. Set the timer for a cycle.\n
        3. Work on the task until the timer rings.\n
        4. When the timer rings, put a checkmark on your TODO list.\n
        5. Take a short break.\n
        6. Every 4 cycle, take a longer break.
    </string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_facebook_sign_up">Sign up with Facebook</string>
    <string name="facebook_app_id">1949822291778023</string>
    <string name="fb_login_protocol_scheme">fb1949822291778023</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
