<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_header_theme">
        <!--<com.kizitonwose.colorpreference.ColorPreference
            android:defaultValue="@color/colorPrimary"
            android:key="@string/key_color"
            android:title="@string/title_color" />-->
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_pom">


        <ListPreference
            android:defaultValue="4"
            android:dialogTitle="@string/title_cycle_pom"
            android:entries="@array/pref_pomodoro_time_entries"
            android:entryValues="@array/pref_pomodoro_time_values"
            android:key="@string/key_time_pom"
            android:summary="@string/summary_time_pom"
            android:title="@string/title_time_pom" />

        <ListPreference
            android:defaultValue="2"
            android:dialogTitle="@string/title_cycle_pom"
            android:entries="@array/pref_pomodoro_cycle_entries"
            android:entryValues="@array/pref_pomodoro_cycle_values"
            android:key="@string/key_pomodoro_cycle"
            android:summary="@string/summary_cycle_pom"
            android:title="@string/title_cycle_pom" />

        <RingtonePreference
            android:defaultValue="content://settings/system/alarm_alert"
            android:key="@string/key_pom_end_ringtone"
            android:ringtoneType="alarm"
            android:summary="@string/summary_pom_ringtone"
            android:title="@string/pref_title_ringtone" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_notifications">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/notifications_new_message"
            android:title="@string/title_new_notification_sound" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="@string/key_notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:summary="@string/summary_choose_ringtone"
            android:title="@string/pref_title_ringtone" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_vibrate"
            android:summary="@string/summary_vibrate"
            android:title="@string/title_vibrate" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
            android:selectable="false"
            android:summary="@string/summary_about" />

        <Preference
            android:summary="@string/app_version"
            android:title="@string/title_version" />
    </PreferenceCategory>
</PreferenceScreen>