<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/about_logo"
                android:layout_width="133dp"
                android:layout_height="134dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/about_logo_content_description"
                app:srcCompat="@drawable/ic_logo_caml" />

            <TextView
                android:id="@+id/about_caml"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/about_caml"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                tools:textSize="24sp" />

            <TextView
                android:id="@+id/about_caml_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="9dp"
                android:text="@string/about_caml_text"
                android:textAlignment="textStart"
                android:textColor="@color/colorWhite"
                tools:textSize="12sp" />

            <TextView
                android:id="@+id/about_non_zero_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/about_non_zero_day"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                tools:textSize="24sp" />

            <TextView
                android:id="@+id/about_non_zero_day_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="9dp"
                android:text="@string/about_non_zero_day_text"
                android:textAlignment="textStart"
                android:textColor="@color/colorWhite"
                tools:textSize="12sp" />

            <TextView
                android:id="@+id/about_pomodoro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/about_pomodoro"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                tools:textSize="24sp" />

            <TextView
                android:id="@+id/about_pomodoro_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="9dp"
                android:text="@string/about_pomodoro_text"
                android:textAlignment="textStart"
                android:textColor="@color/colorWhite"
                tools:textSize="12sp" />

        </LinearLayout>



</ScrollView>