<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    android:gravity="center_horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/signup_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/ic_caml" />

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@+id/signup_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="Create a new account"
        android:textColor="@color/colorGrey"
        android:textStyle="italic" />

    <android.support.v7.widget.AppCompatAutoCompleteTextView
        android:id="@+id/signup_username"
        android:layout_width="220dp"
        android:layout_height="20dp"
        android:layout_below="@+id/signup_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_account_circle_white"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/prompt_username"
        android:inputType="textPersonName"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorDarkGrey"
        android:textSize="14sp" />

    <android.support.v7.widget.AppCompatAutoCompleteTextView
        android:id="@+id/signup_mail"
        android:layout_width="220dp"
        android:layout_height="20dp"
        android:layout_below="@+id/signup_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_account_circle_white"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorDarkGrey"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="220dp"
        android:layout_height="20dp"
        android:layout_below="@+id/signup_mail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_lock_white"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textColorHint="@color/colorDarkGrey"
        android:textSize="14sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/signup_button_cardview"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_below="@+id/signup_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="Sign up"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/signup_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:text="Sign in"
        android:textColor="@color/colorDarkGrey"
        android:textSize="12sp" />

</RelativeLayout>
